LCD_Hardware/MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.24', folder: 'C:\Apps\Keil543\Arm\ARM\ARMCLANG\Bin'
Build target 'LCD_Hardware'
Middel/emwin/Config/GUIDRV_Template.c(452): error: use of undeclared identifier 'ret'
  452 |     printf("_GetDevProp: index=%d, ret=%d\n", Index, ret);
      |                                                      ^
1 error generated.
compiling GUIDRV_Template.c...
"LCD_Hardware\LCD_Hardware.axf" - 1 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:01
